finished and tested all API endpoints for Animes using Postman. Test suite didn't work properly, however the backend is completed

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest",
     "start": "nodemon server.js",
@@ -10,7 +10,7 @@
     "schema": "psql -U postgres -f db/schema.sql",
     "setup": "psql -U postgres -f db/schema.sql -f db/seed.sql"
   },
-  "author": "",
+  "author": "Vianel De La Cruz",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
